@@ -1,8 +1,9 @@
-2018-02-09
+2018-02-10
 
         * Version 1.6.0 released
         ========================
 
+        Add GSkyDir::cos_dist() method (#2309)
         Add GCTABackground::rate_ebin() method (#2308)
 
 
